sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: '(' expected but '{' found.
    else if{
           ^AlgGnomeSort:19: error: illegal start of simple expression
  } while (i!=n)
  ^